added toggle switch with "downloadable?"

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul>
                     <li>Video Quality <ion-icon name="chevron-down-outline"></ion-icon> </li>
                     <li>Password? <br> <input type="text" placeholder="Ex-abcde12345"> </li>
-                    <li>downloadable?</li>
+                    <li>downloadable? <br> <input type="checkbox" class = "toggle-switch"> </li>
                 </ul>
             </div>
 
